# graph_weave

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMMIT_GUIDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini
.github/: dependabot.yaml
.github/workflows/: auto-merge.yaml  release.yaml
.github/workflows/ISSUE_TEMPLATE/: config.yml
docs/adr/: ADR-001-adoption-of-hybrid-rag-architecture.md  ADR-002-adoption-of-design-patterns.md  ADR-003-selection-of-vector-and-graph-databases
infra/: docker-compose.all.yml
infra/graph/: docker-compose.yml
infra/vector/: docker-compose.yml
monitoring/: README.md  docker-compose.yml
monitoring/alertmanager/: config.yml  config.yml.template
monitoring/grafana/provisioning/dashboards/: api-overview.json  rag.json
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: alert.rules.yml  prometheus.yml
settings/: settings.toml
src/graph/api/: app.py  lifespan.py
src/graph/api/routes/: query_router.py
src/graph/app/: eval.py
src/graph/infra/base/: __init__.py  environment.py  exceptions.py  factory.py  instance_registry.py  registry.py
src/graph/infra/config/: __init__.py  settings.py
src/graph/infra/config/providers/: dynaconf_loader.py
src/graph/infra/context/: __init__.py  context_vars.py  execution.py  key_resolver.py  manager.py  propagation.py  types.py
src/graph/infra/observability/: __init__.py  context.py
src/graph/infra/services/: base.py  protocol.py
src/graph/ingestion/: executor.py  service.py
src/graph/retrieval/: service.py
tests/api/: readme.md
tests/infra/store/graph/: test_neo4j_integration.py
tests/infra/store/vector/: test_weaviate_integration.py
tests/retrieval/: test_retrieval_service.py
(+39 files in other folders)
