[project]
name = "graph-weave"
version = "0.1.0"
description = "Use case for Graph and Weave for RAG"
authors = [
    {name = "Guandaline",email = "vhguandaline@gmail.com"}
]
license = {text = "Apache-2.0 license"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
